# MediaSample

./: gradle.properties  keystore.jks  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/ymlion/mediasample/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/ymlion/mediasample/: AudioPlayer.kt  CaptureManager.java  ImageUtil.kt  MainActivity.kt  MenuActivity.kt  PlayManager.kt  RecordActivity.kt  VideoPlayer.kt
app/src/main/java/com/ymlion/mediasample/capture/: Camera1Activity.kt  CameraCapture.java  CaptureActivity.kt  CaptureManager.java  ICameraCallback.java
app/src/main/java/com/ymlion/mediasample/live/: LiveActivity.kt
app/src/main/java/com/ymlion/mediasample/player/: AudioPlayer.kt  PlayManager.kt  VideoPlayActivity.kt  VideoPlayer.kt
app/src/main/java/com/ymlion/mediasample/record/: CaptureManager.java  FrameMap.java  RecordActivity.kt  RecordManager.java
app/src/main/java/com/ymlion/mediasample/util/: CodecCallback.kt  FileUtil.kt  ImageUtil.kt  YuvUtil.java
app/src/main/java/com/ymlion/mediasample/view/: DirectDrawer.java  PreSurfaceView.kt
app/src/main/jni/: yuvtool.c
app/src/main/res/layout/: activity_camera1.xml  activity_capture.xml  activity_live.xml  activity_main.xml  activity_menu.xml  activity_record.xml  activity_video_play.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/ymlion/mediasample/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rtmp-lib/: build.gradle
rtmp-lib/src/main/java/com/ymlion/rtmp/: ChunkReader.java  Command.java  HandShake.java  Rtmp.java  RtmpPlay.java
rtmp-lib/src/main/java/com/ymlion/rtmp/bean/: CommandObject.java  Frame.java  RArray.java  RBoolean.java  RNull.java  RNumber.java  RObject.java  RString.java  RtmpHeader.java
rtmp-lib/src/main/java/com/ymlion/rtmp/util/: ByteUtil.java
